--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,17 @@ install:
         gir1.2-gstreamer-1.0
         git
         make
+        python-pytest
+        python-pytest-xdist
         gstreamer1.0-plugins-bad
         gstreamer1.0-plugins-base
+        gstreamer1.0-tools
         libgstreamer1.0-dev
         libgstreamer-plugins-base1.0-dev
         valac
+        valgrind
 
 script:
  - make prefix=/usr
+ - make check
  - sudo make install prefix=/usr
